# Esakova-games

./: README.md  pyproject.toml
Esakova_games.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
VD_games/: cli.py  engine.py
VD_games/scripts/: VD_calc.py  VD_even.py  VD_games.py  VD_gcd.py  VD_main.py  VD_prime.py  VD_progression.py
