[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Esakova-games"
version = "0.1.0"
description = "Collection of simple math games"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Ksenia", email = "isip_k.o.esakova@mpt.ru"},
]
dependencies = [
    "prompt",
]

[project.scripts]
VD-games = "VD_games.scripts.VD_main:main"
VD-even = "VD_games.scripts.VD_even:main"
VD-calc = "VD_games.scripts.VD_calc:main"
